@@ -25,8 +25,16 @@ end</script>
 				<string>^You can't learn any more about that from books!$</string>
 				<string>^You can't learn smuggling skills from a book!$</string>
 				<string>^You aren't going to learn that from a book. Go find a Wookiee!$</string>
+				<string>^You can't learn bounty hunting skills from a book!$</string>
+				<string>^Go learn it the hard way, sissy.$</string>
+				<string>^You're not going to learn force spells from a book. Trust me.$</string>
+				<string>^You cannot learn more about that from books.$</string>
 			</regexCodeList>
 			<regexCodePropertyList>
+				<integer>1</integer>
+				<integer>1</integer>
+				<integer>1</integer>
+				<integer>1</integer>
 				<integer>1</integer>
 				<integer>1</integer>
 				<integer>1</integer>
@@ -35,7 +43,7 @@ end</script>
 			</regexCodePropertyList>
 		</Trigger>
 		<Trigger isActive="yes" isFolder="no" isTempTrigger="no" isMultiline="no" isPerlSlashGOption="no" isColorizerTrigger="no" isFilterTrigger="no" isSoundTrigger="no" isColorTrigger="no" isColorTriggerFg="no" isColorTriggerBg="no">
-			<name>research.grab</name>
+			<name>research.grabskills</name>
 			<script>if not autoresearch then return end</script>
 			<triggerType>0</triggerType>
 			<conditonLineDelta>0</conditonLineDelta>
@@ -54,18 +62,28 @@ end</script>
 				<integer>1</integer>
 			</regexCodePropertyList>
 			<Trigger isActive="yes" isFolder="no" isTempTrigger="no" isMultiline="no" isPerlSlashGOption="no" isColorizerTrigger="no" isFilterTrigger="no" isSoundTrigger="no" isColorTrigger="no" isColorTriggerFg="no" isColorTriggerBg="no">
-				<name>getresearchitems</name>
+				<name>get3researchskill</name>
 				<script>if not autoresearch then return end
 researchList = researchList or {}
-skill1 = string.trim(matches[2])
-skill2 = string.trim(matches[4])
-skill3 = string.trim(matches[6])
-if tonumber(matches[3]) &lt; 90 then table.insert(researchList, skill1) end
-if tonumber(matches[5]) &lt; 90 then table.insert(researchList, skill2) end
-if tonumber(matches[7]) &lt; 90 then table.insert(researchList, skill3) end</script>
+skill1 = ""
+skill2 = false
+skill3 = false
+
+skill1 = matches[2]
+if tonumber(matches[3]) &lt; 80 then table.insert(researchList, skill1) end
+
+if matches[4] then
+	skill2 = matches[4]
+	if tonumber(matches[5]) &lt; 80 then table.insert(researchList, skill2) end
+end
+
+if matches[6] then
+	skill3 = matches[6]
+	if tonumber(matches[7]) &lt; 80 then table.insert(researchList, skill3) end
+end</script>
 				<triggerType>0</triggerType>
 				<conditonLineDelta>0</conditonLineDelta>
-				<mStayOpen>99</mStayOpen>
+				<mStayOpen>0</mStayOpen>
 				<mCommand></mCommand>
 				<packageName></packageName>
 				<mFgColor>#ff0000</mFgColor>
@@ -74,16 +92,16 @@ if tonumber(matches[7]) &lt; 90 then table.insert(researchList, skill3) end</scr
 				<colorTriggerFgColor>#000000</colorTriggerFgColor>
 				<colorTriggerBgColor>#000000</colorTriggerBgColor>
 				<regexCodeList>
-					<string>([a-z_ ]+)([0-9]+)% ([a-z_ ]+)([0-9]+)% ([a-z_ ]+)([0-9]+)%</string>
+					<string>^\s*(\w+[ \-a-zA-Z]+)(\d+)%\s*(?:(\w+[ \-a-zA-Z]+)(\d+)%)?\s*(?:(\w+[ \-a-zA-Z]+)(\d+)%)?\s*$</string>
 				</regexCodeList>
 				<regexCodePropertyList>
 					<integer>1</integer>
 				</regexCodePropertyList>
 			</Trigger>
 			<Trigger isActive="yes" isFolder="no" isTempTrigger="no" isMultiline="no" isPerlSlashGOption="no" isColorizerTrigger="no" isFilterTrigger="no" isSoundTrigger="no" isColorTrigger="no" isColorTriggerFg="no" isColorTriggerBg="no">
-				<name>stop getting research items</name>
-				<script>setTriggerStayOpen("research.grab", 0)
-setTriggerStayOpen("getresearchitems", 0)</script>
+				<name>stop getting research skills</name>
+				<script>setTriggerStayOpen("research.grabskills", 0)
+setTriggerStayOpen("getresearchskills", 0)</script>
 				<triggerType>0</triggerType>
 				<conditonLineDelta>0</conditonLineDelta>
 				<mStayOpen>0</mStayOpen>
@@ -157,7 +175,7 @@ send("prac")
 cecho("&lt;dodger_blue&gt;Retrieving research list...\n")
 currentResearchListIndex = 1
 
-tempTimer(.5, [[cecho("&lt;dodger_blue&gt; researching " .. researchList[currentResearchListIndex])]])
+tempTimer(.5, [[cecho("&lt;dodger_blue&gt;researching " .. researchList[currentResearchListIndex])]])
 tempTimer(1, [[send("research " .. researchList[currentResearchListIndex])]])</script>
 			<command></command>
 			<packageName></packageName>
